--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,7 @@ pytest = "^6.2.5"
 pre-commit = "^2.15.0"
 flake8 = "^4.0.1"
 mypy = "^0.910"
+bumpversion = "^0.6.0"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
