--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,7 @@ pre-commit = "^2.15.0"
 flake8 = "^4.0.1"
 mypy = "^0.910"
 bumpversion = "^0.6.0"
+black = "^21.9b0"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
